# vanitygen-cli

./: Cargo.toml  README.md  README.zh-CN.md
.github/workflows/: ci.yml
src/: address.rs  cli.rs  commands.rs  config.rs  error.rs  main.rs  mnemonic.rs  search.rs  verify.rs
tests/: integration.rs
